# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yirgacheffe"
version = "1.4.0"
description = "Abstraction of gdal datasets for doing basic math operations"
readme = "README.md"
authors = [{ name = "Michael Dales", email = "mwd24@cam.ac.uk" }]
license = "ISC"
keywords = ["gdal", "numpy", "math"]
dependencies = [
    "numpy",
    "gdal[numpy]",
    "scikit-image",
    "torch"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["mypy", "pylint", "pytest", "h3", "pytest-cov", "mlx"]

[project.urls]
Homepage = "https://github.com/quantifyearth/yirgacheffe"

[project.scripts]
realpython = "reader.__main__:main"

[[tool.mypy.overrides]]
module = "osgeo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "h3.*"
ignore_missing_imports = true
