# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yirgacheffe"
version = "1.8.1"
description = "Abstraction of gdal datasets for doing basic math operations"
readme = "README.md"
authors = [{ name = "Michael Dales", email = "mwd24@cam.ac.uk" }]
license = "ISC"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["gdal", "gis", "geospatial", "declarative"]
dependencies = [
    "numpy>=1.24,<3.0",
    "gdal[numpy]>=3.8,<4.0",
    "scikit-image>=0.20,<1.0",
    "torch",
    "dill",
    "deprecation",
    "tomli",
    "h3",
]
requires-python = ">=3.10"

[project.optional-dependencies]
mlx = [
    "mlx",
]
dev = [
    "mypy",
    "pylint",
    "pytest",
    "pytest-cov",
    "build",
    "twine",
    "mkdocs-material",
    "mkdocstrings-python",
    "mike",
    "mkdocs-gen-files",
]

[project.urls]
Homepage = "https://yirgacheffe.org/"
Repository = "https://github.com/quantifyearth/yirgacheffe.git"
Issues = "https://github.com/quantifyearth/yirgacheffe/issues"
Changelog = "https://yirgacheffe.org/latest/changelog/"

[project.scripts]
realpython = "reader.__main__:main"

[tool.setuptools.package-data]
yirgacheffe = ["py.typed"]

[[tool.mypy.overrides]]
module = "osgeo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "h3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "deprecation.*"
ignore_missing_imports = true

[tool.setuptools.packages.find]
exclude = ["site*", "docs*", "tests*"]
